Corregido bug relacionado con el z-index de las cartas

--- a/src/assets/card.css
+++ b/src/assets/card.css
@@ -27,11 +27,12 @@
     height: 100%;
     transition: transform 0.6s;
     transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.game-card-inner > * {
-    transition: background-color 0.25s;
+.game-card-inner > *,
+.game-card-inner svg,
+.game-card-inner span {
+    transition: background-color 0.5s, color 0.5s;
 }
 
 .game-card-inner,
